<resources>
    <string name="app_name">DARKSIDE</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="login">INGRESAR</string>
    <string name="nombre">Camilo Estevan Tacue Salazar</string>
    <string name="ficha">ADSO 2556678</string>


    //--------------------------------
    <string name="ippo">HAJIME NO IPPO</string>
    <string name="descripcion">Hajime no Ippo (はじめの一歩 traducido al español como El primer paso), también conocido como Fighting Spirit y Espíritu de lucha en Hispanoamérica, es un manga sobre boxeo creado por el autor Jyoji Morikawa (森川ジョージ) que además de ser un mangaka, es un mánager de boxeadores entre los que destaca Manabu Fukushima.</string>
    <string name="salida">SALIR</string>
</resources>