<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity2"
    android:background="@drawable/ippofondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ippo"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="508dp"
        android:layout_gravity="center"
        android:src="@drawable/ippo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"

        />
<Button
    android:id="@+id/botonSalir"
    android:gravity="center"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/salida"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/black"
    android:textColor="@color/white"
    />
</LinearLayout>